customize and add previous site archive

--- a/index.njk
+++ b/index.njk
@@ -1,14 +1,15 @@
 ---
-title: Title. Update me.
+title: Welcome
 layout: layouts/home.njk
-description: Description. Update me.
+description: homepage layout
 image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
 date: Last Modified
 ---
 
 <p>
-  This is a demo website based on 
-  <a href="https://www.industrialempathy.com/posts/eleventy-high-performance-blog/">eleventy-high-performance-blog</a>.
+  Github page of Louis Paulet  <br>
+  <a href="https://github.com/louispaulet/">Github</a>. <br>
+  <a href="https://www.linkedin.com/in/louispaulet/">Linkedin</a>. <br>
 </p>
 
 <div id="posts">
