--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Welcome
+title: Louis Paulet side project hub
 layout: layouts/home.njk
 description: homepage layout
 image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
@@ -7,9 +7,9 @@ date: Last Modified
 ---
 
 <p>
-  Github page of Louis Paulet  <br>
-  <a href="https://github.com/louispaulet/">Github</a>. <br>
-  <a href="https://www.linkedin.com/in/louispaulet/">Linkedin</a>. <br>
+  Github page of Louis Paulet - 
+  <a href="https://github.com/louispaulet/">Github</a>.  - 
+  <a href="https://www.linkedin.com/in/louispaulet/">Linkedin</a>.
 </p>
 
 <div id="posts">
