--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+.post_block {
+  border: 1px solid DimGray; /* set the border color to a light gray */
+  border-radius: 4px; /* round the corners of the div */
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 1px 1px rgba(0, 0, 0, 0.23); /* add a subtle box-shadow for depth */
+  margin: 10px; /* add a margin around the div */
+  padding: 10px; /* add padding inside the div */
+}
+
+
 /* Color customization */
 :root {
   --primary: #f9c412;
