first blog post (mostyl finished) and stable design, deploying to github

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 .post_block {
-  border: 1px solid DimGray; /* set the border color to a light gray */
+  border-top: 1px solid DimGray; /* set the top border color to a light gray */
+  border-bottom: 1px solid DimGray; /* set the bottom border color to a light gray */
   border-radius: 4px; /* round the corners of the div */
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 1px 1px rgba(0, 0, 0, 0.23); /* add a subtle box-shadow for depth */
   margin: 10px; /* add a margin around the div */
@@ -122,6 +123,16 @@ header aside {
 #posts li {
   margin-bottom: 0.5em;
 }
+
+#posts h2 {
+  text-align: center;
+}
+
+#intro p {
+  text-align: center;
+}
+
+
 
 /* https://github.com/rsms/inter/blob/master/LICENSE.txt
 
