--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -71,7 +71,9 @@
         </div>
         <div id="reading-progress" aria-hidden="true"></div>
       </nav>
-      <h1>{{ title }}</h1>
+      <div id="main_title">
+        <h1>{{ title }}</h1>
+      </div>
       {% block extraArticleHeader %}{% endblock %}
       <dialog id="message"></dialog>
       {% if googleanalytics %}
