--- a/index.njk
+++ b/index.njk
@@ -10,8 +10,9 @@ date: Last Modified
   <img src="https://i.imgur.com/1rXmpj2.jpg" alt="drawing of the architecture of 4 buildings"> </br>
   <p>
     Github page of Louis Paulet - 
-    <a href="https://github.com/louispaulet/">Github</a>.  - 
-    <a href="https://www.linkedin.com/in/louispaulet/">Linkedin</a>.
+    <a href="https://www.linkedin.com/in/louispaulet/">Linkedin</a> - 
+    <a href="https://github.com/louispaulet/">Github</a>  - 
+    <a href="https://the_french_artist.artstation.com/">Artstation</a>  
   </p>
 </div>
 
